tests/paczka1/fuzzy1/94037817.err
Error in line 1: KxlIKA A763 52,5
Error in line 14: CoPiBunz4 A763 4,8
Error in line 23: KxlIKA S989 83,66
Error in line 25: YWvTF A763 87,3
Error in line 24: KxlIKA A73 60,4
Error in line 27: KxlIKA S989 25,6
Error in line 29: KxlIKA A763 12,4
